syntax = "proto3";
package main;

option go_package = "todowheel-backend/proto";

message PostCreateTask {
    string task_name = 1 [json_name="taskName"];
    int32 task_id = 2 [json_name="taskId"];

    optional int32 task_length = 20 [json_name="taskLength"];
}
